--- a/style.css
+++ b/style.css
@@ -115,4 +115,9 @@ h4{
     background-color: grey;
 }
 
-text-
+
+.video{
+    padding-top: 2em;
+    padding-left: 13em;
+    padding-bottom: 2em;
+}
